pet profile picture is no longer stretched :D

--- a/app/assets/stylesheets/pages/_profile.scss
+++ b/app/assets/stylesheets/pages/_profile.scss
@@ -7,6 +7,7 @@
 }
 
 .pet-prof-icon {
+  object-fit: cover;
   height: 200px;
   width: 200px;
   border-radius: 50%;
